# tesla-skill

./: .env.example  .gitignore  ABOUT.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
docs/: AGENTS.md  DEPLOY.md  SETUP.md
scripts/: generate_virtual_key.py  register_partner.py
src/tesla_skill/: __init__.py  config.py  server.py
src/tesla_skill/auth/: __init__.py  authorize.py  callback_server.py  oauth.py  storage.py
src/tesla_skill/fleet/: __init__.py  base.py  mock.py  real.py  signer.py
