[project]
name = "tesla-skill"
version = "0.1.0"
description = "Tesla Fleet API exposed as MCP tools for AI agents (Claude Code, Cursor, Claude Desktop, etc.)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Vibetool", email = "team@vibetool.ai" },
]
keywords = ["tesla", "mcp", "fleet-api", "agent", "claude", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "cryptography>=43.0.0",
]

[project.urls]
Homepage = "https://github.com/Vibetool/tesla-skill"
Issues = "https://github.com/Vibetool/tesla-skill/issues"

[project.scripts]
tesla-skill-mcp = "tesla_skill.server:main"
tesla-skill-callback = "tesla_skill.auth.callback_server:main"
tesla-skill-authorize = "tesla_skill.auth.authorize:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tesla_skill"]
